tests/lean/sum3.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'macros'
  Imported 'pair'
  Imported 'subtype'
  Imported 'optional'
  Using: subtype
  Using: optional
  Defined: sum_pred
  Defined: sum
  Proved: sum::inl_pred
  Proved: sum::inr_pred
  Proved: sum::inhabl
  Proved: sum::inhabr
  Defined: sum::inl
  Defined: sum::inr
  Proved: sum::inl_inj
  Proved: sum::inr_inj
  Proved: sum::distinct
sum3.lean:96:0: error: invalid tactic command, unexpected end of file
Proof state:
A :
    (Type U),
B :
    (Type U),
n :
    sum A B,
pred :
    (proj1 (subtype::rep n) = optional::none) ≠ (proj2 (subtype::rep n) = optional::none)
⊢ (∃ a : A, n = sum::inl a B) ∨ (∃ b : B, n = sum::inr A b)
